[gd_scene load_steps=3 format=3 uid="uid://xrj7avwboogx"]

[ext_resource type="Script" uid="uid://dr3gfp5iaiu30" path="res://scenes/game_board.gd" id="1_3wu0g"]
[ext_resource type="PackedScene" uid="uid://cvee1rgs3kqu8" path="res://scenes/game_pause_menu.tscn" id="1_tqoos"]

[node name="GameBoard" type="Node"]
script = ExtResource("1_3wu0g")

[node name="GamePauseMenu" parent="." instance=ExtResource("1_tqoos")]
visible = false
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.5
offset_right = 0.0
offset_bottom = 0.0

[connection signal="continue_pressed" from="GamePauseMenu" to="." method="_on_game_pause_menu_continue_pressed"]
[connection signal="exit_pressed" from="GamePauseMenu" to="." method="_on_game_pause_menu_exit_pressed"]
